Change color arrow down

--- a/src/App.css
+++ b/src/App.css
@@ -71,7 +71,7 @@ body {
 }
 .fa-arrow-alt-circle-down {
 	font-size: 300%;
-	color: #100d29;
+	color: whitesmoke;
 }
 .fa-arrow-alt-circle-down:hover {
 	color: #1e09dd;
