--- a/css/style.css
+++ b/css/style.css
@@ -458,6 +458,13 @@ hr {
 	border-top: 1px solid rgba(0, 0, 0, 0.1);
 }
 
+@media (max-width: 767.98px) {
+	.padding {
+		padding: 5rem;
+		margin: 0rem 2rem;
+	}
+}
+
 small,
 .small {
 	font-size: 80%;
@@ -11997,6 +12004,12 @@ textarea.form-control {
 	z-index: -1;
 	font-weight: 900;
 }
+
+@media (max-width: 767.98px) {
+	.heading-section h1.big {
+		visibility: hidden;
+	}
+}
 .heading-section h1.big.big-2 {
 	right: 0;
 }
@@ -12011,6 +12024,7 @@ textarea.form-control {
 	.heading-section h2 {
 		font-size: 38px;
 		text-align: center;
+		margin-top: 2rem;
 	}
 }
 .heading-section.heading-section-white .subheading {
